<resources>
    <string name="app_name">NetworkInfo</string>
    <string name="Test">Test</string>
    <string name="DirectResult">Direct Results</string>
    <string name="Schedule">Schedule tasks</string>
    <string name="Start_Recording">Start Recording</string>
    <string name="Save_in">Save in</string>
    <string name="Visual_Wifi_Scan">Visual WiFi Scan</string>
    <string name="Visual_Network_Scan">Visual Network Scan</string>
    <string name="Network_operator">Network operator</string>
    <string name="Network_type">Network type</string>
    <string name="Speed_test">Speed test</string>
    <string name="SMS_ping">SMS ping</string>
    <string name="Cell_info">Cell info</string>
    <string name="Call_test">Call test</string>
    <string name="Add_task">Add task</string>
    <string name="Scan_type">Scan type</string>
    <string name="Technology">Technology</string>
    <string name="Network">Network</string>
    <string name="Duration">Duration</string>
    <string name="Start_task">Start task</string>
    <string name="Save_task">Save task list</string>
    <string name="Load_task_list">Load task list</string>
    <string name="Start_scan">Start scan</string>
    <string name="Start_call_test">Start call test</string>
    <string name="Phone_number">Phone number</string>
    <string name="Sms_receive">Receive tasks through SMS</string>
    <string name="Send_sms">Send SMS</string>
    <string name="Use_wifi">Use WiFi</string>
    <string name="Operator">Operator</string>
    <string name="Apply">Apply</string>
    <string name="Network_options">Network options</string>
    <string name="Current_technology">Current techonology</string>
    <string name="Current_network">Current network</string>
    <string name="Delete_all">Delete ALL</string>
    <string name="Notification">Notification SMS:</string>
    <string name="Resgistered_cell_only">Save Resgistered cells only</string>
</resources>
