<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeBtn"
        android:icon="@drawable/ic_action_name"
        android:title="Home"
        app:showAsAction="always" />

    <item
        android:id="@+id/cellInfo_menu"
        android:title="@string/Cell_info" />
    <item
        android:id="@+id/networkoptions_menu"
        android:title="@string/Network_options" />
    <item
        android:id="@+id/speedTest_menu"
        android:title="@string/Speed_test" />
    <item
        android:id="@+id/smsping_menu"
        android:title="@string/SMS_ping" />
    <item
        android:id="@+id/calltest_menu"
        android:title="@string/Call_test" />
</menu>